<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Aura Clone</string>
    
    <!-- Navigation -->
    <string name="remote_control">Remote</string>
    <string name="smart_home">Smart Home</string>
    <string name="me">Me</string>
    
    <!-- Help Section -->
    <string name="elk_me_using_help">Using Help</string>
    <string name="help_section_subtitle">Learn how to use your remote control</string>
    <string name="elk_me_novice_guide">• Novice Guide</string>
    <string name="use_instructions">• User Manual</string>
    <string name="qa_instructions">• Q&amp;A</string>
    
    <!-- Remote Control -->
    <string name="hello_remote">Hello, Remote Control</string>
    <string name="add_remote">Add Remote</string>
    <string name="not_connect_any_remote">Not connected to any remote</string>
    <string name="connect">Connect</string>
    
    <!-- TV Remote Keys -->
    <string name="tv_av">AV</string>
    <string name="volume">VOL</string>
    <string name="program">CH</string>
    <string name="KeyType_menu">MENU</string>
    <string name="KeyType_back">BACK</string>
    <string name="num_123">123</string>
    <string name="quit">EXIT</string>
    
    <!-- Status -->
    <string name="initializing">Initializing…</string>
    <string name="test_transmit">Test Transmit (Power)</string>
    <string name="elk_logo_title">Powered by Aura IR</string>
    
    <!-- Actions -->
    <string name="close_btn">Close</string>
    <string name="voice_mode">Voice Mode</string>
    
    <!-- Additional UI Strings -->
    <string name="brand_list">Brand List</string>
    <string name="search">Search</string>
    <string name="loading">Loading…</string>
    <string name="xpopup_ok">OK</string>
    
    <!-- Guide Strings -->
    <string name="elk_guide_home_titleone">Welcome to Aura Remote</string>
    <string name="elk_guide_home_titletwo">Control your devices easily</string>
    <string name="elk_guide_home_titlethree">Get started now</string>
</resources>
