<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@mipmap/guide_home_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="30.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/title_one" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/elk_guide_home_titleone" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="23.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/title_two" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/elk_guide_home_titletwo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_one" />
    <TextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/title_three" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" android:text="@string/elk_guide_home_titlethree" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_two" />
    <Button android:textSize="18.0sp" android:textColor="@color/black" android:gravity="center" android:id="@+id/guide_home_ok" android:layout_width="120.0dip" android:layout_height="50.0dip" android:layout_marginTop="88.0dip" android:text="@string/xpopup_ok" android:backgroundTint="@color/white" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title_three" />
</androidx.constraintlayout.widget.ConstraintLayout>
