<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/very_light" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@+id/iv_back" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:src="@mipmap/icon_chevron_left" android:contentDescription="@null" android:layout_marginStart="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:tint="@color/white" />
    <TextView android:textSize="16.0sp" android:textStyle="bold" android:textColor="@color/white" android:id="@+id/tv_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/brand_list" app:layout_constraintBottom_toBottomOf="@id/iv_back" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/iv_back" />
    <View android:id="@+id/v_title_line" android:background="@color/line_very_gray" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="5.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_back" />
    <androidx.appcompat.widget.SearchView android:id="@+id/brand_sc_result" android:background="@drawable/searchview_border" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="10.0dip" app:layout_constraintTop_toBottomOf="@id/v_title_line" app:queryHint="@string/search" app:iconifiedByDefault="false" />
    <ProgressBar android:id="@+id/pb_loading" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:id="@+id/tv_loading" android:textColor="@color/text_secondary" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/loading" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/pb_loading" />
    <androidx.recyclerview.widget.RecyclerView android:id="@+id/rv_brand_list" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="0.0dip" android:layout_marginTop="10.0dip" android:layout_marginEnd="10dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/brand_sc_result" />
    <TextView android:textStyle="bold" android:textColor="@android:color/white" android:id="@+id/tv_select" android:background="@color/teal_300" android:padding="20.0dip" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintBottom_toBottomOf="@id/rv_brand_list" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/rv_brand_list" />
</androidx.constraintlayout.widget.ConstraintLayout>
